modules/ec2/ec2.tf
resource "tls_private_key" "bastion_ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "bastion_key" {
  key_name   = "${var.project_name}-bastion-key"
  public_key = tls_private_key.bastion_ssh_key.public_key_openssh
}

resource "aws_ssm_parameter" "bastion_ssh_private_key" {
  name  = "/${var.project_name}/ec2/bastion-key"
  type  = "SecureString"
  value = tls_private_key.bastion_ssh_key.private_key_pem
}

resource "aws_security_group" "bastion" {
  name        = "${var.project_name}-bastion-sg"
  description = "Security group for Bastion host"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "bastion" {
  ami                    = "${var.basic_ec2_ami}"
  instance_type          = "t3.micro"
  subnet_id              = var.public_subnet_ids[0]
  vpc_security_group_ids = [aws_security_group.bastion.id]
  key_name               = aws_key_pair.bastion_key.key_name
  associate_public_ip_address = true

  tags = {
    Name = "${var.project_name}-Bastion-Host"
  }

  user_data = templatefile("${path.module}/tpl/bastion_host.tpl", {
    ssh_setting = templatefile("${path.module}/tpl/ssh_setting.tpl", {
      ssh_public_key = tls_private_key.bastion_ssh_key.public_key_openssh}),
    ssh_private_key = tls_private_key.bastion_ssh_key.private_key_pem
    })
}

resource "aws_eip" "ec2_eip" {
  domain   = "vpc"
  instance = aws_instance.bastion.id

  tags = {
    Name = "${var.project_name}-Bastion-EIP"
}
}

resource "tls_private_key" "private_ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "private_key" {
  key_name   = "${var.project_name}-private-key"
  public_key = tls_private_key.private_ssh_key.public_key_openssh
}

resource "aws_ssm_parameter" "private_ssh_private_key" {
  name  = "/${var.project_name}/ec2/private-key"
  type  = "SecureString"
  value = tls_private_key.private_ssh_key.private_key_pem
}

resource "aws_security_group" "private_instances" {
  name        = "${var.project_name}-private-instances-sg"
  description = "Security group for private instances"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "airflow" {
  name        = "${var.project_name}-airflow-sg"
  description = "Security group for Airflow server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  ingress {
    from_port       = 9102
    to_port         = 9102
    protocol        = "tcp"
    security_groups = [aws_security_group.grafana.id]
  }
}

resource "aws_iam_role" "ec2_role" {
  name = "${var.project_name}_airflow_ec2_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy" "ec2_s3_access" {
  name = "ec2_s3_access"
  role = aws_iam_role.ec2_role.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "s3:GetObject",
          "s3:ListBucket"
        ]
        Effect   = "Allow"
        Resource = [
          "arn:aws:s3:::${var.s3_bucket_name}",
          "arn:aws:s3:::${var.s3_bucket_name}/*",
          "arn:aws:s3:::${var.project_name}-test-zone",
          "arn:aws:s3:::${var.project_name}-test-zone/*"
        ]
      }
    ]
  })
}

resource "aws_iam_instance_profile" "ec2_profile" {
  name = "${var.project_name}_airflow_ec2_profile"
  role = aws_iam_role.ec2_role.name
}

resource "aws_iam_role_policy_attachment" "ssm_managed_instance_core" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
  role       = aws_iam_role.ec2_role.name
}

resource "aws_instance" "airflow" {
  ami                    = "${var.airflow_ec2_ami}"
  instance_type          = "t3.medium"
  subnet_id              = var.private_subnet_ids[0]
  vpc_security_group_ids = [aws_security_group.private_instances.id, aws_security_group.airflow.id]
  key_name               = aws_key_pair.private_key.key_name
  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  tags = {
    Name = "${var.project_name}-Airflow-Server-Instance"
  }
  
  user_data = templatefile("${path.module}/tpl/airflow_user_data.tpl", {
    ssh_setting = templatefile("${path.module}/tpl/ssh_setting.tpl", {
      ssh_public_key = tls_private_key.private_ssh_key.public_key_openssh}),
    aws_access_key_id = var.aws_access_key_id,
    aws_secret_access_key = var.aws_secret_access_key,
    aws_region = var.aws_region})
}

resource "aws_security_group" "django" {
  name        = "${var.project_name}-django-sg"
  description = "Security group for Airflow server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }
}

resource "aws_instance" "main_server" {
  ami                    = "${var.basic_ec2_ami}"
  instance_type          = "t3.medium"
  subnet_id              = var.private_subnet_ids[1]
  vpc_security_group_ids = [aws_security_group.private_instances.id, aws_security_group.django.id]
  key_name               = aws_key_pair.private_key.key_name
  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  tags = {
    Name = "${var.project_name}-Main-Server"
  }

  user_data = templatefile("${path.module}/tpl/django_user_data.tpl", {
    ssh_setting = templatefile("${path.module}/tpl/ssh_setting.tpl", {
      ssh_public_key = tls_private_key.private_ssh_key.public_key_openssh}),
    aws_access_key_id = var.aws_access_key_id,
    aws_secret_access_key = var.aws_secret_access_key,
    aws_region = var.aws_region
  })
}

resource "aws_security_group" "grafana" {
  name        = "${var.project_name}-grafana-sg"
  description = "Security group for Grafana server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }
}

resource "aws_instance" "grafana_server" {
  ami                    = "${var.basic_ec2_ami}"
  instance_type          = "t3.small"
  subnet_id              = var.private_subnet_ids[1]
  vpc_security_group_ids = [aws_security_group.private_instances.id, aws_security_group.grafana.id]
  key_name               = aws_key_pair.private_key.key_name

  tags = {
    Name = "${var.project_name}-Grafana-Server"
  }

  user_data = templatefile("${path.module}/tpl/grafana_user_data.tpl", {
    ssh_setting = templatefile("${path.module}/tpl/ssh_setting.tpl", {
      ssh_public_key = tls_private_key.private_ssh_key.public_key_openssh})
  })
}

resource "aws_instance" "redis_server" {
  ami                    = "${var.basic_ec2_ami}"
  instance_type          = "t3.micro"
  subnet_id              = var.private_subnet_ids[1]
  vpc_security_group_ids = [aws_security_group.private_instances.id, aws_security_group.redis.id]
  key_name               = aws_key_pair.private_key.key_name


  tags = {
    Name = "${var.project_name}-message-broker-EC2"
  }

  user_data = templatefile("${path.module}/tpl/redis_user_data.tpl",{})
  
}

resource "aws_security_group" "redis" {
  name        = "${var.project_name}-redis-sg"
  description = "Security group for redis server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.airflow.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "dbt_server" {
  ami                    = "${var.basic_ec2_ami}"
  instance_type          = "t3.medium"
  subnet_id              = var.private_subnet_ids[1]
  vpc_security_group_ids = [aws_security_group.private_instances.id]
  key_name               = aws_key_pair.private_key.key_name

  tags = {
    Name = "${var.project_name}-DBT-Server"
  }

  user_data = templatefile("${path.module}/tpl/dbt_user_data.tpl", {
    production_redshift_host = var.production_redshift_host,
    production_redshift_user = var.production_redshift_user,
    production_redshift_password = var.production_redshift_password,
    production_redshift_db = var.production_redshift_db,
  })
  
}

resource "aws_security_group" "alb" {
  name        = "${var.project_name}-alb-sg"
  description = "Security group for ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }
    
  ingress {
    from_port   = 8099
    to_port     = 8099
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_lb" "airflow" {
  name               = "${var.project_name}-airflow-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = var.public_subnet_ids
}

resource "aws_lb_target_group" "airflow" {
  name     = "${var.project_name}-airflow-tg"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = var.vpc_id
  health_check {
    path = "/health"
    port = "8080"
    protocol = "HTTP"
    timeout = 5
    interval = 30
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_target_group" "superset_server" {
  name     = "${var.project_name}-superset-tg"
  port     = 8099
  protocol = "HTTP"
  vpc_id   = var.vpc_id
  health_check {
    path = "/health"
    port = "8099"
    protocol = "HTTP"
    timeout = 5
    interval = 30
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener" "airflow" {
  load_balancer_arn = aws_lb.airflow.arn
  port              = "80"  
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.airflow.arn
  }
  tags = {
    Name = "${var.project_name}-airflow-listener"
  }
}

resource "aws_lb_listener" "grafana" {
  load_balancer_arn = aws_lb.airflow.arn
  port              = "3000"  
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.grafana_server.arn
  }
  tags = {
    Name = "${var.project_name}-grafana-listener"
  }
}


resource "aws_lb_listener" "superset_server" {
  load_balancer_arn = aws_lb.airflow.arn
  port              = "8099"  
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.superset_server.arn
  }
  tags = {
    Name = "${var.project_name}-superset-listener"
  }
}

resource "aws_lb_target_group_attachment" "airflow" {
  target_group_arn = aws_lb_target_group.airflow.arn
  target_id        = aws_instance.airflow.id
  port             = 8080
}

resource "aws_lb_target_group_attachment" "superset_server" {
  target_group_arn = aws_lb_target_group.superset_server.arn
  target_id        = aws_instance.superset_server.id
  port             = 8099
}

resource "aws_lb" "django_server" {
  name               = "${var.project_name}-django-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = var.public_subnet_ids
}

resource "aws_lb_target_group" "django_server" {
  name     = "${var.project_name}-django-tg"
  port     = 8000
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}

resource "aws_lb_listener" "django_server" {
  load_balancer_arn = aws_lb.django_server.arn
  port              = "80"  
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.django_server.arn
  }
  tags = {
    Name = "${var.project_name}-django-listener"
  }
  
}

resource "aws_lb_target_group_attachment" "django_server" {
  target_group_arn = aws_lb_target_group.django_server.arn
  target_id        = aws_instance.main_server.id
  port             = 8000
}


resource "aws_lb_target_group" "grafana_server" {
  name     = "${var.project_name}-grafana-tg"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = var.vpc_id
  health_check {
    path = "/login"
    port = "3000"
    protocol = "HTTP"
    timeout = 5
    interval = 30
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}


resource "aws_lb_target_group_attachment" "grafana_server" {
  target_group_arn = aws_lb_target_group.grafana_server.arn
  target_id        = aws_instance.grafana_server.id
  port             = 3000
}

resource "aws_instance" "airflow_first_worker" {
  ami                    = "${var.airflow_ec2_ami}"
  instance_type          = "t3.medium"
  subnet_id              = var.private_subnet_ids[0]
  vpc_security_group_ids = [aws_security_group.private_instances.id, aws_security_group.airflow.id]
  key_name               = aws_key_pair.private_key.key_name
  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  tags = {
    Name = "${var.project_name}-Airflow-Worker-1"
  }
  
}

resource "aws_security_group" "superset_server" {
  name        = "${var.project_name}-superset-sg"
  description = "Security group for superset server"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 8099
    to_port     = 8099
    protocol    = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "superset_server" {
  ami                    = "ami-0a3914c4bd7f9103d"
  instance_type          = "t3.small"
  subnet_id              = var.private_subnet_ids[1]
  vpc_security_group_ids = [aws_security_group.superset_server.id, aws_security_group.private_instances.id]
  key_name               = aws_key_pair.private_key.key_name
  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  user_data = templatefile("${path.module}/tpl/superset_user_data.tpl",{})

  tags = {
    Name = "${var.project_name}-superset-server"
  }
  
}
